Fix not sale price spacing when countdown price visible

--- a/src/postcss/woocommerce/single-product.css
+++ b/src/postcss/woocommerce/single-product.css
@@ -225,6 +225,7 @@
 
   & del {
     font-size: 1rem;
+    padding-left: 1em;
   }
 }
 
